Leak in CFNetwork Loader RetainPtr<> should Adopt a Copy allocation https://bugs.webkit.org/show_bug.cgi?id=65789

Reviewed by David Kilzer.

Fix a leak by adopting an allocation instead of retaining it.

* platform/network/cf/FormDataStreamCFNet.cpp:
(WebCore::httpBodyFromRequest):


Canonical link: https://commits.webkit.org/81627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92530 268f45cc-cd09-0410-ab3c-d52691b4dbfc